<resources>
    <string name="app_name">GeekBrainsNavigation</string>
    <string name="title_left" translatable="false">Left Fragment</string>
    <string name="title_middle" translatable="false">Middle Fragment</string>
    <string name="title_right" translatable="false">Right Fragment</string>
    <string name="next_fragment" translatable="false">Next Fragment</string>
    <string name="signin" translatable="false">Sign In</string>
    <string name="signup" translatable="false">Sign Up</string>
    <string name="toMain" translatable="false">Sign In -> Main</string>
    <string name="toSignIn" translatable="false">Sign Up -> Sign In</string>
    <string name="bottom_sheet" translatable="false">Bottom Sheet</string>
    <string name="fragment_in_bottom_sheet" translatable="false">This is fragment in bottom_sheet</string>
    <string name="tab_1" translatable="false">Tab 1</string>
    <string name="tab_2" translatable="false">Tab 2</string>
    <string name="tab_3" translatable="false">Tab 3</string>
    <string name="fragment_tab1" translatable="false">Fragment Tab</string>
    <string name="fragment_tab2" translatable="false">Fragment Tab_2</string>
    <string name="fragment_tab3" translatable="false">Fragment Tab_3</string>
    <string name="bottom_navigation" translatable="false">Bottom Navigation</string>
    <string name="tabs" translatable="false">Tabs</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="inner_right_bottom_navigation_fragment" translatable="false">Inner Right Fragment</string>
    <string name="inner_middle_bottom_navigation_fragment" translatable="false">Inner Middle Fragment</string>
    <string name="inner_left_bottom_navigation_fragment" translatable="false">Inner Left Fragment</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</string>
    <string name="lorem_ipsum_full" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </string>
    <string name="next" translatable="false">Next</string>
    <string name="main" translatable="false">Main</string>
    <string name="first_name" translatable="false">First name</string>
    <string name="a_slide" translatable="false">A slide</string>
    <string name="b_slide" translatable="false">B slide</string>
    <string name="some_text">Write something here!</string>
    <string name="right_fragment" translatable="false">Right fragment</string>
</resources>