<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/pic_auth"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/lorem_ipsum"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <Button
        android:id="@+id/signInButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/signUpButton" />

    <Button
        android:id="@+id/signUpButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>